Agregando otros index files.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1>Pagina inicial</h1>
-        <p>Esta es la primera pagina del curso web y patrones</p>
+        <nav> 
+            <a href="index.html"><h1>TechShop</h1></a>
+            <a href="ejemplo1.html">Siguiente</a>
+            <a href="ejemplo2.html">Atras</a>
+        </nav>
     </body>
 </html>
