Agregando imagenes y videos

--- a/src/main/resources/static/imagenes.html
+++ b/src/main/resources/static/imagenes.html
@@ -24,19 +24,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </nav>
         </header>
         <aside class="aside">
-            <h2 id="video">Uso de videos</h2>
-            <p>Este es un ejemplo de como se utilizan videos en html</p>
+            <h2 id="imagenes">Uso de imagenes</h2>
+            <p>Este es un ejemplo de como se utilizan imagenes en html</p>
         </aside>
         <section class="section">
             <article>
-                <h2>Uso de Videos mp3</h2>
+                <h2>Uso de Imagenes</h2>
             </article>
             <figure>
-                <video width="320" height="240" controls>
-                    <source src="video/torpedo.mp4" type="video/mp4">
-                    Your browser does not support the <code>video</code> tag.
-                </video>
-                <figcaption>Video</figcaption>
+                <img src="audio/imagen/torpedo.jpg" alt=""/>
+                <figcaption>Imagenes</figcaption>
             </figure>
         </section>
         <footer class="footer">
