--- a/src/main/resources/static/imagenes.html
+++ b/src/main/resources/static/imagenes.html
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemploformulario.html">Atras</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="audios.html">Audios</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="videos.html">Videos</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="imagenes.html">Imagenes</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="iframes.html">Iframes</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="index.html">Inicio</a></li>   
                 </ul>
