Agregando el link al archivo de audios en el index

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <a href="index.html"><h1>TechShop</h1></a>
             <a href="ejemplo1.html">Siguiente</a>
             <a href="ejemplo2.html">Atras</a>
+            <a href="audios.html">Audios</a>
         </nav>
     </body>
 </html>
