--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <a href="ejemplo1.html">Siguiente</a>
             <a href="ejemplo2.html">Atras</a>
             <a href="audios.html">Audios</a>
+            <a href="formularios.html">Formularios</a>
+            <a href="imagenes.html">Imagenes</a>
         </nav>
     </body>
 </html>
